test_regress/t/t_inst_missing_bad.out
%Warning-PINNOCONNECT: t/t_inst_missing_bad.v:15:8: Instance pin is not connected: '__pinNumber2'
   15 |       ,,
      |        ^
                       ... For warning description see https://verilator.org/warn/PINNOCONNECT?v=latest
                       ... Use "/* verilator lint_off PINNOCONNECT */" and lint_on around source to disable this message.
%Warning-PINMISSING: t/t_inst_missing_bad.v:13:7: Instance has missing pin: 'missing'
   13 |   sub sub (
      |       ^~~
                     t/t_inst_missing_bad.v:24:11: ... Location of port declaration
   24 |     input missing
      |           ^~~~~~~
                     ... For warning description see https://verilator.org/warn/PINMISSING?v=latest
                     ... Use "/* verilator lint_off PINMISSING */" and lint_on around source to disable this message.
%Error: Exiting due to
